syntax = "proto3";

package product;

message ProductResponse{
  string id = 1;
  int32 price_in_cents = 2;
  string title = 3;
  string description = 4;


  Discount discount = 5;
}

message Discount{
  float pct = 1;
  int32 value_in_cents = 2;
}
message ProductRequest{
  string product_id = 1;
}

message Empty {}

message ProductList{
  repeated ProductResponse products = 1;
}

service ProductService{
  rpc GetProduct(ProductRequest) returns (ProductResponse);
  rpc ListProduct(Empty) returns (ProductList);
}


